objects/BP_CourseEventOutreach__c.object
<CustomObject><fields>
        <fullName>ApplicationType__c</fullName>
        <inlineHelpText>Whichever option you select here will determine which page layout that the student applying for the school/Outreach will use</inlineHelpText>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DTS</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>MLD</fullName>
                </value>
                <value>
                    <fullName>ELM</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>OUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>ApproverAdmissionsEnglish__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Admissions (English)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CoursesEventsOutreachesApproverAdminEn</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ApproverAdmissionsKorean__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Admissions (Korean)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CoursesEventsOutreachesApproverAdminKo</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ApproverBaseLeadershipEnglish__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Base Leadership (English)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CoursesEventsOutreachesBaseLeadershipEn</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ApproverBaseLeadershipKorean__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Base Leadership (Korean)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CoursesEventsOutreachesBaseLeadershipKo</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ApproverSchoolLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - School Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CoursesEventsOutreachesSchoolLeaderApp</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ArrivalDate__c</fullName>
        <formula>CASE( MONTH(  StartDate__c - 1), 1, "January", 2, "February", 3, "March", 4, "April", 5, "May", 6, "June", 7, "July", 8, "August", 9, "September", 10, "October", 11, "November", 12, "December", "-" )
+ ' ' + TEXT(DAY(  StartDate__c - 1)) + ', ' + TEXT(YEAR(StartDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Date</label>
        <type>Text</type>
    </fields><fields>
        <fullName>CalculatedCourseCode__c</fullName>
        <formula>text(CourseCodeYear__c) + text(CourseCodeQuarter__c) + text(CourseCodeAcronym__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Course Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canceled</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Cost__c</fullName>
        <inlineHelpText>Total cost, including deposit</inlineHelpText>
        <label>Cost</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>CourseCodeAcronym__c</fullName>
        <label>Course Code - Acronym</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DTS</fullName>
                </value>
                <value>
                    <fullName>BCC</fullName>
                </value>
                <value>
                    <fullName>MLD</fullName>
                </value>
                <value>
                    <fullName>CDS</fullName>
                </value>
                <value>
                    <fullName>SBSI</fullName>
                </value>
                <value>
                    <fullName>SBSII</fullName>
                </value>
                <value>
                    <fullName>SBSIII</fullName>
                </value>
                <value>
                    <fullName>DPDTS</fullName>
                </value>
                <value>
                    <fullName>DPBCC</fullName>
                </value>
                <value>
                    <fullName>DPFCMI</fullName>
                </value>
                <value>
                    <fullName>DPFCMII</fullName>
                </value>
                <value>
                    <fullName>DPFCMO</fullName>
                </value>
                <value>
                    <fullName>EIS</fullName>
                </value>
                <value>
                    <fullName>ExecMALII</fullName>
                </value>
                <value>
                    <fullName>ExecMALIII</fullName>
                </value>
                <value>
                    <fullName>ExecMALIV</fullName>
                </value>
                <value>
                    <fullName>FCM</fullName>
                </value>
                <value>
                    <fullName>NKSS</fullName>
                </value>
                <value>
                    <fullName>OUTNA</fullName>
                </value>
                <value>
                    <fullName>OUTREGEN</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>SBS</fullName>
                </value>
                <value>
                    <fullName>SEM</fullName>
                </value>
                <value>
                    <fullName>SOW</fullName>
                </value>
                <value>
                    <fullName>SPB</fullName>
                </value>
                <value>
                    <fullName>WBH</fullName>
                </value>
                <value>
                    <fullName>APC</fullName>
                </value>
                <value>
                    <fullName>BLS</fullName>
                </value>
                <value>
                    <fullName>CAR</fullName>
                </value>
                <value>
                    <fullName>CBVM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>CourseCodeQuarter__c</fullName>
        <label>Course Code - Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>CourseCodeYear__c</fullName>
        <label>Course Code - Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
                <value>
                    <fullName>2040</fullName>
                </value>
                <value>
                    <fullName>2041</fullName>
                </value>
                <value>
                    <fullName>2042</fullName>
                </value>
                <value>
                    <fullName>2043</fullName>
                </value>
                <value>
                    <fullName>2044</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>CourseEventName__c</fullName>
        <label>Course / Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>CourseType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Type</label>
        <referenceTo>CourseType__c</referenceTo>
        <relationshipLabel>Courses / Events / Outreaches</relationshipLabel>
        <relationshipName>CoursesEventsOutreaches</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>DepartureDate__c</fullName>
        <formula>CASE( MONTH(  EndDate__c+1 ), 1, "January", 2, "February", 3, "March", 4, "April", 5, "May", 6, "June", 7, "July", 8, "August", 9, "September", 10, "October", 11, "November", 12, "December", "-" )
+ ' ' + TEXT(DAY(  EndDate__c+1)) + ', ' + TEXT(YEAR(EndDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Departure Date</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Deposit__c</fullName>
        <label>Deposit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>RelatedLecture__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Lecture</label>
        <referenceTo>BP_CourseEventOutreach__c</referenceTo>
        <relationshipLabel>Outreach Teams</relationshipLabel>
        <relationshipName>CoursesEventsOutreaches</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ShowInOnlineApplicationSystem__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, it will allow students to see and apply for this course/event/outreach on our online application system.</inlineHelpText>
        <label>Show in Online Application System</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>UofNCourseNumber__c</fullName>
        <label>UofN Course Number</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>XrefId__c</fullName>
        <externalId>true</externalId>
        <label>XrefId</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ywamlausannecomURL__c</fullName>
        <inlineHelpText>Full url to take the user directly to the page for this school/outreach/event.
example: https://www.ywamlausanne.com/october-dts/</inlineHelpText>
        <label>ywamlausanne.com URL</label>
        <type>Url</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Course / Event / Outreach</label><nameField>
        <label>Course / Event / Outreach</label>
        <type>Text</type>
    </nameField><pluralLabel>Courses / Events / Outreaches</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CalculatedCourseCode__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>Cost__c</columns>
        <columns>Deposit__c</columns>
        <columns>CourseType__c</columns>
        <columns>ShowInOnlineApplicationSystem__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><recordTypes>
        <fullName>Course</fullName>
        <active>true</active>
        <description>Used for schools/seminars like DTS, SBS, BCC...</description>
        <label>Course</label>
    </recordTypes><recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes><recordTypes>
        <fullName>Outreach</fullName>
        <active>true</active>
        <label>Outreach</label>
    </recordTypes></CustomObject>